--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
         </div>
 
         <div class="slideshow">
-            <div class="image"> <img src="/Images/Slide1.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide2.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide3.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide4.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide5.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide6.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide7.jpg" alt=""> </div>
-            <div class="image"> <img src="/Images/Slide8.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide1.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide2.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide3.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide4.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide5.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide6.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide7.jpg" alt=""> </div>
+            <div class="image"> <img src="Images/Slide8.jpg" alt=""> </div>
         </div>
 
         <div class="more"> <a href="#">More</a> </div>
